--- a/OneD-OneD/Game/Game.vcxproj
+++ b/OneD-OneD/Game/Game.vcxproj
@@ -135,12 +135,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="dragon.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="explosion.cpp" />
     <ClCompile Include="formation.cpp" />
     <ClCompile Include="GalagaGame.cpp" />
     <ClCompile Include="GalagaStates.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="Hero.cpp" />
+    <ClCompile Include="HeroControllerComponent.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="missile.cpp" />
     <ClCompile Include="ship.cpp" />
@@ -148,12 +151,15 @@
     <ClCompile Include="states.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dragon.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="explosion.h" />
     <ClInclude Include="formation.h" />
     <ClInclude Include="GalagaGame.h" />
     <ClInclude Include="GalagaStates.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="hero.h" />
+    <ClInclude Include="HeroControllerComponent.h" />
     <ClInclude Include="missile.h" />
     <ClInclude Include="ship.h" />
     <ClInclude Include="shipControllerComponent.h" />
