--- a/OneD-OneD/Game/Game.vcxproj.filters
+++ b/OneD-OneD/Game/Game.vcxproj.filters
@@ -62,6 +62,15 @@
     <ClCompile Include="states.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dragon.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="Hero.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="HeroControllerComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shipControllerComponent.h">
@@ -93,6 +102,15 @@
     </ClInclude>
     <ClInclude Include="states.h">
       <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dragon.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="hero.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="HeroControllerComponent.h">
+      <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
