Achievement System Completed

--- a/OneD-OneD/Game/Game.vcxproj
+++ b/OneD-OneD/Game/Game.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="achievement.cpp" />
     <ClCompile Include="door.cpp" />
     <ClCompile Include="dragon.cpp" />
     <ClCompile Include="enemy.cpp" />
@@ -153,6 +154,7 @@
     <ClCompile Include="states.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="achievement.h" />
     <ClInclude Include="door.h" />
     <ClInclude Include="dragon.h" />
     <ClInclude Include="enemy.h" />
