--- a/OneD-OneD/Game/Game.vcxproj.filters
+++ b/OneD-OneD/Game/Game.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="room.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="achievementSave.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -74,6 +77,9 @@
       <Filter>Objects</Filter>
     </ClInclude>
     <ClInclude Include="room.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="achievementSave.h">
       <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
