--- a/OneD-OneD/Game/Game.vcxproj.filters
+++ b/OneD-OneD/Game/Game.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="achievementSave.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="Fountain.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -80,6 +83,9 @@
       <Filter>Objects</Filter>
     </ClInclude>
     <ClInclude Include="achievementSave.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="Fountain.h">
       <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
