--- a/OneD-OneD/Game/Game.vcxproj.filters
+++ b/OneD-OneD/Game/Game.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="Fountain.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="pauseScreen.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game.h">
@@ -86,6 +89,9 @@
       <Filter>Objects</Filter>
     </ClInclude>
     <ClInclude Include="Fountain.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="pauseScreen.h">
       <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
