--- a/OneD-OneD/Game/Game.vcxproj
+++ b/OneD-OneD/Game/Game.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="dragon.cpp" />
     <ClCompile Include="Fountain.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="helper.cpp" />
     <ClCompile Include="Hero.cpp" />
     <ClCompile Include="HeroControllerComponent.cpp" />
     <ClCompile Include="item.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="dragon.h" />
     <ClInclude Include="Fountain.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="helper.h" />
     <ClInclude Include="hero.h" />
     <ClInclude Include="HeroControllerComponent.h" />
     <ClInclude Include="item.h" />
